# python-snacks

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml  wiki.yml
docs/: highlight.bundle.js  index.html
docs/wiki/: Commands-Reference.md  Configuration.md  Error-Reference.md  Home.md  Installation.md
snacks/: auth.py  config.py  main.py  ops.py
tests/: test_commands.py  test_stash_commands.py
wiki/: Contributing.md  Home.md  Installation.md  Writing-Good-Snippets.md
