[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-snacks"
version = "0.1.3"
description = "A CLI tool for managing a personal stash of reusable Python code snippets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
]

[project.scripts]
snack = "snacks.main:app"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snacks*"]
